--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -36,7 +36,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#about">Nosotros</a></li>
+                <li><a href="/nosotros">Nosotros</a></li>
                 <li><a href="#contact">Contactenos</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Informes <span class="caret"></span></a>
