--- a/legion/templates/backend/base.html
+++ b/legion/templates/backend/base.html
@@ -23,6 +23,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    {% block styles %}
+    {% endblock styles %}
   </head>
   <body class="skin-blue">
     <!-- Site wrapper -->
@@ -194,6 +196,8 @@
     <!-- FastClick -->
     <script src="{% static 'plugins/fastclick/fastclick.min.js' %}" type="text/javascript"></script>
     <!-- AdminLTE App -->
-    <script src="{% static 'dist/js/app.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dist/js/app.min.js' %}" type="text/javascript"></script>}
+    {% block scripts %}
+    {% endblock scripts %}
   </body>
 </html>
