--- a/legion/templates/registration/password_reset.html
+++ b/legion/templates/registration/password_reset.html
@@ -1,18 +1,49 @@
 {% extends 'backend/base.html' %}
 {% load staticfiles %}
-    {% block title %}
-    <title>Cambio de Contraseña</title>
-    {% endblock %}
-    {% block contenido %}
-            <h2> Cambio de clave</h2>
-            <hr>
-            <form method="post" action="">
-                {% csrf_token %}
-                <table>
-                {{ form.as_table }}
-                </table>
-                <p>
-                    <input class="btn btn-large btn-success" type="submit" value="Cambiar" />
-                </p>
-            </form>
-    {% endblock contenido %}
+{% block style %}
+<style type="text/css">
+tr{
+    margin: 15px auto;
+}
+</style>
+{% endblock style %}
+{% block title %}
+Cambio de Contraseña
+{% endblock %}
+{% block contenido %}
+        <h2> Cambio de clave</h2>
+        <hr>
+        <form method="post" action="">
+            {% csrf_token %}
+            <table>
+                <tr>
+                    <th>
+                        <label>Contraseña Actual:</label>
+                    </th>
+                    <td>
+                        {{form.old_password}}
+                    </td>
+                </tr>
+                <hr>
+                <tr>
+                    <th>
+                        <label>Contraseña Nueva:</label>
+                    </th>
+                    <td>
+                        {{form.new_password1}}
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label>Repetir Contraseña:</label>
+                    </th>
+                    <td>
+                        {{form.new_password2}}
+                    </td>
+                </tr>
+            </table>
+            <p>
+                <input class="btn btn-large btn-success" type="submit" value="Cambiar" />
+            </p>
+        </form>
+{% endblock contenido %}
