--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -18,7 +18,7 @@
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
   </head>
 
-  <body>
+  <body class="container">
     <div class="navbar-wrapper">
       <div class="container">
 
@@ -69,16 +69,20 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="{% static 'img/portada/imagen1.jpg' %}"  alt="First slide" />
+          <img src="{% static 'img/portada/imagen2.jpg' %}"  alt="First slide" />
+        </div>
+        <div class="item">
+          <img src="{% static 'img/portada/imagen3.jpg' %}" alt="Third slide" />
         </div>
         <div class="item">
           <img src="{% static 'img/portada/imagen2.jpg' %}" alt="Second slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/imagen3.jpg' %}" alt="Third slide" />
+          <img src="{% static 'img/portada/imagen3.jpg' %}" alt="four slide" />
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
