--- a/legion/templates/frontend/index.html
+++ b/legion/templates/frontend/index.html
@@ -4,24 +4,30 @@
 	<div class="row">
 
           <div class="col-lg-4">
-            <img src="{% static 'img/noticias/sanroque.png' %}" alt="Generic placeholder image" style="width: 140px; height: 160px;">
+            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <!--
+            <img src="{% static 'img/noticias/sanroque.png' %}" alt="Generic placeholder image" style="width: 140px; height: 160px;">-->
             <h2>San Roque</h2>
             <p>Nació en Francia, en la ciudad de Montpellier, el año 1295, de padres ricos. "Roc" o "Roque" era seguramente su apellido. En aquella comarca hubo otros "Roques" por aquel siglo. No sabemos su nombre de pila. Murió en 1327. - Fiesta: 16 de agosto.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
           </div>
 
           <div class="col-lg-4">
-            <img src="{% static 'img/noticias/escudo.png' %}" alt="Generic placeholder image" style="width: 140px; height: 160px;">
+            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <!--
+            <img src="{% static 'img/noticias/escudo.png' %}" alt="Generic placeholder image" style="width: 140px; height: 160px;">-->
             <h2>Escudo</h2>
             <p>El distrito de Hualhuas es uno de los 28 que conforman la provincia de Huancayo, ubicada en el Departamento de Junín, perteneciente bajo la administración del Gobierno Regional de Junín, en el Perú.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-success" href="#" role="button">View details &raquo;</a></p>
           </div>
 
           <div class="col-lg-4">
-            <img src="{% static 'img/noticias/avelino.png' %}" alt="Generic placeholder image" style="width: 140px; height: 160px;">
+            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <!--
+            <img src="{% static 'img/noticias/avelino.png' %}" alt="Generic placeholder image" style="width: 140px; height: 160px;">-->
             <h2>Avelino</h2>
             <p>La danza de los Avelinos, tiene su origen ancestral en la infausta Guerra del Pacífico, allá por los años de 1879 a 1833, en la que durante la Campaña de resistencia",de la breña marchaban los guerrilleros o montoneros de Cáceres, al compás de las palabras “yana y Jarachamanta” (pié derecho, pié izquierdo).</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-danger" href="#" role="button">View details &raquo;</a></p>
           </div>
 
       </div>
