--- a/legion/templates/registration/password_done.html
+++ b/legion/templates/registration/password_done.html
@@ -5,6 +5,6 @@
     {% endblock %}
     {% block contenido %}
         <div class="hero-unit">
-            <h1> clave cambiada con exito <small> <a href="/panel/profile"> Regresar</a>  </small></h1>
+            <h1> clave cambiada con exito <small> <a href="{% url 'perfil' %}"> Regresar</a>  </small></h1>
         </div>
     {% endblock contenido %}
