--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -18,7 +18,7 @@
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
   </head>
 
-  <body class="container">
+  <body class="">
     <div class="navbar-wrapper">
       <div class="container">
 
