--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -11,11 +11,12 @@
 
     <title>AVELINOS SASAR</title>
 
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" />
     <link href="{% static 'bootstrap/css/carousel.css' %}" rel="stylesheet" />
     <link href="{% static 'bootstrap/css/navbar.css' %}" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+    {% block css %}{% endblock css %}
+    
   </head>
 
   <body class="">
@@ -73,16 +74,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="{% static 'img/portada/imagen2.jpg' %}"  alt="First slide" />
+          <img src="{% static 'img/portada/portada4.jpg' %}"  alt="First slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/imagen3.jpg' %}" alt="Third slide" />
+          <img src="{% static 'img/portada/portada2.jpg' %}" alt="Third slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/imagen2.jpg' %}" alt="Second slide" />
+          <img src="{% static 'img/portada/portada3.jpg' %}" alt="Second slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/imagen3.jpg' %}" alt="four slide" />
+          <img src="{% static 'img/portada/portada1.jpg' %}" alt="four slide" />
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -105,7 +106,9 @@
             </div>
           </div>
       </footer>
-
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+      <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+      {% block script %}{% endblock script %}
     </div>
   </body>
 </html>
