iamagenes de portada

--- a/legion/templates/frontend/index.html
+++ b/legion/templates/frontend/index.html
@@ -10,12 +10,7 @@
             <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
           </div>
 
-          <div class="col-lg-4">
-            <img src="{% static 'img/noticias/escudo.png' %}" alt="Generic placeholder image" style="width: 140px; height: 170px;">
-            <h2>Escudo</h2>
-            <p>El distrito de Hualhuas es uno de los 28 que conforman la provincia de Huancayo, ubicada en el Departamento de Junín, perteneciente bajo la administración del Gobierno Regional de Junín, en el Perú.</p>
-            <p><a class="btn btn-success" href="#" role="button">View details &raquo;</a></p>
-          </div>
+          <iframe class="col-lg-4"height="350px" src="https://www.youtube.com/embed/_Qg_29ciQUE" frameborder="0" allowfullscreen></iframe>
 
           <div class="col-lg-4">
             <img src="{% static 'img/noticias/avelino.png' %}" alt="Generic placeholder image" style="width: 140px; height: 170px;">
@@ -51,3 +46,5 @@
     </div>
 </div>
 {% endblock contenido %}
+{% block script %}
+{% endblock script %}
