--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -32,12 +32,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">SASAR</a>
+              <a id="titulo" class="navbar-brand" href="#">Asociacion Avelinos San Roque</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="/nosotros">Nosotros</a></li>
+                <li><a href="/nosotros">Socios</a></li>
                 <li><a href="#contact">Contactenos</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Informes <span class="caret"></span></a>
@@ -70,20 +70,16 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="{% static 'img/portada/portada4.jpg' %}"  alt="First slide" />
+          <img src="{% static 'img/portada/port1.jpg' %}"  alt="First slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/portada2.jpg' %}" alt="Third slide" />
+          <img src="{% static 'img/portada/port2.jpg' %}" alt="Third slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/portada3.jpg' %}" alt="Second slide" />
-        </div>
-        <div class="item">
-          <img src="{% static 'img/portada/portada1.jpg' %}" alt="four slide" />
+          <img src="{% static 'img/portada/port4.jpg' %}" alt="Second slide" />
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
