--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -73,13 +73,13 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="{% static 'img/portada/port1.jpg' %}"  alt="First slide" />
+          <img src="{% static 'img/portada/img_portada1.jpg' %}"  alt="First slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/port2.jpg' %}" alt="Third slide" />
+          <img src="{% static 'img/portada/img_portada2.jpg' %}" alt="Third slide" />
         </div>
         <div class="item">
-          <img src="{% static 'img/portada/port4.jpg' %}" alt="Second slide" />
+          <img src="{% static 'img/portada/img_portada3.jpg' %}" alt="Second slide" />
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
