--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -15,7 +15,9 @@
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" />
     <link href="{% static 'bootstrap/css/carousel.css' %}" rel="stylesheet" />
     <link href="{% static 'bootstrap/css/navbar.css' %}" rel="stylesheet" />
+    <link href="{% static 'plugins/fancybox/jquery.fancybox.css' %}" rel="stylesheet" />
     {% block css %}{% endblock css %}
+    {% block style %}{% endblock style %}
     
   </head>
 
@@ -32,7 +34,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a id="titulo" class="navbar-brand" href="#">Asociacion Avelinos San Roque</a>
+              <a id="titulo" class="navbar-brand" href="#">Sociedad de Avelinos San Roque  -  "SASAR"</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -104,6 +106,7 @@
       </footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+      <script src="{% static 'plugins/fancybox/jquery.fancybox.js' %}"></script>
       {% block script %}{% endblock script %}
     </div>
   </body>
