--- a/legion/templates/backend/egresos.html
+++ b/legion/templates/backend/egresos.html
@@ -57,7 +57,7 @@
     <table class="table table-hover">
       <tbody><tr>
         <th>N° de Recibo</th>
-        <th>Socio</th>
+        <th>Motivo</th>
         <th>Monto Pagado</th>
         <th>Fecha</th>
       </tr>
@@ -68,7 +68,7 @@
             {{pagos.recibo}}
           </p>
         </td>
-        <td>{{pagos.socio}}</td>
+        <td>{{pagos.concepto}}</td>
         <td>
           <span class="badge bg-light-blue">
             {{pagos.monto}} soles
