--- a/legion/templates/frontend/index.html
+++ b/legion/templates/frontend/index.html
@@ -95,7 +95,7 @@
     </div>
 </div>
     <div id="content row">
-        <p><a href="#popup" class="fancybox">Abrir de nuevo</a></p>
+        <p><a href="#popup" class="fancybox"></a></p>
         <div id="popup" style="display:none; width:560px;">
             <img class="col-lg-12" src="{% static 'img/noticias/fiesta270315.jpg' %}" alt="..." />
         </div>  
