--- a/legion/templates/backend/base.html
+++ b/legion/templates/backend/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock title %}</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     <!-- Bootstrap 3.3.2 -->
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
     <!-- Font Awesome Icons -->
@@ -17,6 +18,7 @@
          folder instead of downloading all of them to reduce the load. -->
     <link href="{% static 'dist/css/skins/_all-skins.min.css' %}" rel="stylesheet" type="text/css" />
 
+    {% block css %}{% endblock css %}
     {% block style %}
 
     {% endblock style %}
@@ -26,15 +28,13 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    {% block styles %}
-    {% endblock styles %}
   </head>
   <body class="skin-blue">
     <!-- Site wrapper -->
     <div class="wrapper">
       
       <header class="main-header">
-        <a href="../../index2.html" class="logo"><b>Avelino </b>SASAR</a>
+        <a href="/home" class="logo"><b>Avelino </b>SASAR</a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
@@ -50,44 +50,39 @@
               <li class="dropdown notifications-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="fa fa-bell-o"></i>
-                  <span class="label label-warning">10</span>
+                  <span class="label label-warning">1</span>
                 </a>
                 <ul class="dropdown-menu">
                   <li class="header">Saldo Actual.</li>
                   <li>
                     <!-- inner menu: contains the actual data -->
-                    <ul class="menu">
+                    <ul class="">
                       <li>
-                        <a href="#">
-                          <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                        </a>
+                        S/ {{el_saldo}} Nuevos Soles.
                       </li>
                     </ul>
                   </li>
-                  <li class="footer"><a href="#">View all</a></li>
+                  <li class="footer"><a href="#"></a></li>
                 </ul>
               </li>
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
-                  <span class="hidden-xs">Alexander Pierce</span>
+                  <img src="{{MEDIA_URL}}{{usuario.picture}}" class="user-image" alt="User Image"/>
+                  <span class="hidden-xs">{{usuario.first_name}} {{usuario.last_name}}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+                    <img src="{{MEDIA_URL}}{{usuario.picture}}" class="img-circle" alt="User Image" />
                     <p>
-                      Nefi Arroyo - Jubilado
-                      <small>Miembro desde Nov. 2012</small>
+                      {{usuario.first_name}} {{usuario.last_name}}
+                      <small>Miembro desde {{usuario.create_at}}</small>
                     </p>
                   </li>
                   <!-- Menu Body -->
                   <!-- Menu Footer-->
                   <li class="user-footer">
-                    <div class="pull-left">
-                      <a href="#" class="btn btn-default btn-flat">Perfil</a>
-                    </div>
                     <div class="pull-right">
                       <a href="{% url 'logout' %}" class="btn btn-default btn-flat">Salir</a>
                     </div>
@@ -108,10 +103,10 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+              <img src="{{MEDIA_URL}}{{usuario.picture}}" class="img-circle" alt="User Image" />
             </div>
             <div class="pull-left info">
-              <p>Nefi Arroyo</p>
+              <p>{{usuario.username}}</p>
             </div>
           </div>
           <!-- /.search form -->
@@ -124,15 +119,33 @@
               </a>
             </li>
             <li>
+              <a href="{% url 'galeria_imagenes' %}">
+                <i class="fa fa-user"></i> <span>Galeria de Imagenes</span>
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'galeria_video' %}">
+                <i class="fa fa-user"></i> <span>Galeria de Video</span>
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'socio' usuario.dni %}">
+                <i class="fa fa-user"></i> <span>Cuenta</span>
+              </a>
+            </li>
+            <!--
+            <li>
               <a href="{% url 'password_reset' %}">
                 <i class="fa fa-th"></i> <span>Cambiar contraseña</span>
               </a>
             </li>
+            -->
             <li>
               <a href="{% url 'junta_directiva' %}">
                 <i class="fa fa-th"></i> <span>Junta Directiva</span>
               </a>
             </li>
+            {% if admin %}
             <li>
               <a href="{% url 'temporada' %}">
                 <i class="fa fa-th"></i> <span>Apertura</span>
@@ -148,16 +161,22 @@
                 <i class="fa fa-th"></i> <span>Pagos de Actividades</span>
               </a>
             </li>
+            {% endif %}
             <li class="treeview">
               <a href="#">
                 <i class="fa fa-dashboard"></i> <span>Reportes</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Reporte por Socio</a></li>
-                <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Reporte General</a></li>
-                <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Reporte de Egresos</a></li>
-                <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Reporte de Ingresos</a></li>
+                <li><a href="{% url 'reporte_socio' %}"><i class="fa fa-circle-o"></i> Reporte por Socio</a></li>
+                <li><a href="{% url 'reporte_general' %}"><i class="fa fa-circle-o"></i> Reporte General</a></li>
+                <li><a href="{% url 'reporte_egresos' %}"><i class="fa fa-circle-o"></i> Reporte de Egresos</a></li>
+                <li><a href="{% url 'reporte_ingresos' %}"><i class="fa fa-circle-o"></i> Reporte de Ingresos</a></li>
               </ul>
+            </li>
+            <li>
+              <a href="{% url 'logout' %}">
+                <i class="fa fa-user"></i> <span>Salir</span>
+              </a>
             </li>
           </ul>          
         </section>
@@ -196,14 +215,15 @@
         <div class="pull-right hidden-xs">
           <b>Version</b> 2.0
         </div>
-        <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2015 <a href="http://almsaeedstudio.com">Sasar Avelinos</a>.</strong> All rights reserved.
       </footer>
     </div><!-- ./wrapper -->
 
     <!-- jQuery 2.1.3 -->
     <script src="{% static 'plugins/jQuery/jQuery-2.1.3.min.js' %}"></script>
     <!-- Bootstrap 3.3.2 JS -->
-    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+      <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
     <!-- SlimScroll -->
     <script src="{% static 'plugins/slimScroll/jquery.slimScroll.min.js' %}" type="text/javascript"></script>
     <!-- FastClick -->
