--- a/legion/templates/backend/ingresos.html
+++ b/legion/templates/backend/ingresos.html
@@ -26,7 +26,12 @@
                   </p>
                   <p>
                     <label for="id_temporada">Nombre de Socio:</label>
-                    <input type="text" name="socio" id="id_socio" class="form-control" />
+                    <!--<input type="text" name="socio" id="id_socio" class="form-control" />-->
+                    <select name="socio" id="id_socio" class="form-control">
+                      {% for socio in socios %}
+                        <option value="{{socio.id}}" >{{socio.first_name}} {{socio.last_name}}</option>
+                      {% endfor %}
+                    </select>
                   </p>
                   <p>
                     <label for="id_inicio">Monto a Pagar:</label>
