--- a/legion/templates/frontend/socio.html
+++ b/legion/templates/frontend/socio.html
@@ -1,7 +1,63 @@
 {% extends 'backend/base.html' %}
 {% load staticfiles %}
+{% block css %}
+    <link href="{% static 'bootstrap/css/carousel.css' %}" rel="stylesheet" />
+{% endblock css %} 
 {% block contenido %}
 
-{{usuario.first_name}}
+<div class="row container">
+	<header class="row">
+		<img class="col-lg-3" src="{{MEDIA_URL}}{{socio.picture}}">
+		<aside class="col-lg-2"><br>
+			<label>RESIDENCIA</label><p>{{socio.residencia}}</p>
+			<label>DIRECCION</label><p>{{socio.direccion}}</p>
+			<label>OCUPACION</label><p>{{socio.ocupacion}}</p>
+			<label>CORREO</label><p>{{socio.email}}</p>
+			<label>DNI</label><p>{{socio.dni}}</p>
+		</aside>
+		<div class="col-lg-7">
+			<h3>{{socio.first_name}} {{socio.last_name}}</h3>
+			<p style="text-align:justify;padding:10px;">{{socio.resumen}}</p>
+		</div>
+	</header>
+	<br/><br/>
+	<section class="row">
+		<video class="col-lg-6" controls>
+		  <source src="{{MEDIA_URL}}{{socio.video}}" type="video/mp4">
+			Video
+		</video>
+
+		<aside class="col-lg-6">
+		    <div  id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	            <ol class="carousel-indicators">
+	              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+	              <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+	              <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
+	            </ol>
+	            <div class="carousel-inner">
+	              <div class="item active">
+	                <img src="{{MEDIA_URL}}{{socio.picture}}" alt="First slide">
+	                <div class="carousel-caption">
+	                  First Slide
+	                </div>
+	              </div>
+	              {% for imagen in galeria_imagenes %}
+	              <div class="item">
+	                <img src="{{MEDIA_URL}}{{imagen.nombre}}" alt="Second slide">
+	              </div>
+	              {% endfor %}
+	            </div>
+	            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+	              <span class="fa fa-angle-left"></span>
+	            </a>
+	            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+	              <span class="fa fa-angle-right"></span>
+	            </a>
+	        </div>
+        </aside>
+
+	</section>
+
+</div>
 
 {% endblock contenido %}
