info de la pagina web

--- a/legion/static/css/style.css
+++ b/legion/static/css/style.css
@@ -12,4 +12,10 @@
 	font-weight: bold;
 	font-size: 16pt;
 }
-	
+#image_socios{
+	width: 100px;
+	height: 100px;
+}
+#info-socios .texto-center{
+	padding-top: 4%;
+}
