--- a/legion/templates/frontend/index.html
+++ b/legion/templates/frontend/index.html
@@ -108,4 +108,7 @@ $(document).ready(function () {
     $(".fancybox").trigger('click');
 });
 </script>
+<script type="text/javascript">
+$(document).ready(function(){$("#home").addClass("active")});
+</script>
 {% endblock script %}
