--- a/legion/templates/frontend/estatutos.html
+++ b/legion/templates/frontend/estatutos.html
@@ -6,10 +6,11 @@ $(document).ready(function(){$("#informe").addClass("active")});
 {% block contenido %}
   <div class="row">
     <p class="MsoNormal" style="text-align:center;background:#B2A1C7" align="center"><strong style="mso-bidi-font-weight: normal"><strong style="mso-bidi-font-weight:normal"><span style="font-size:24.0pt; font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE">ASOCIACIÓN “SOCIEDAD DE AVELINOS SAN ROQUE”-SASAR </span></strong><span style="font-size:24.0pt;font-family: &quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE"> </span></strong></p>
+    <p class="MsoNormal" style="text-align:center;background:#B2A1C7" align="center"><strong style="mso-bidi-font-weight: normal"><strong style="mso-bidi-font-weight:normal"><span style="font-size:24.0pt; font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE">ESTATUTOS </span></strong><span style="font-size:24.0pt;font-family: &quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE"> </span></strong></p>
 	<p> </p>
 	<p> </p>
 	<p class="MsoNormal" style="text-align:center" align="center"><strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE"> </span></strong></p>
-	<p class="MsoNormal" style="text-align:center" align="center"><strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE">Lima, marzo 2014</span></strong></p>
+	<p class="MsoNormal" style="text-align:center" align="center"><strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE">Lima, marzo 2015</span></strong></p>
 	<p class="MsoNormal" style="text-align:center" align="center"><strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE"> </span></strong></p>
 	<p><strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE"> </span></strong> <strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE"> </span></strong></p>
 	<p class="MsoNormal" style="text-align:center" align="center"><strong style="mso-bidi-font-weight: normal"><span style="font-size:14.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;" lang="ES-PE">INDICE</span></strong></p>
