--- a/legion/templates/backend/index.html
+++ b/legion/templates/backend/index.html
@@ -11,6 +11,6 @@ p{
     <h1 class="cover-heading"> RESUMEN DE {{usuario.first_name|upper}}</h1>
     <p class="lead">{{usuario.resumen}}</p>
     <p class="lead">
-      <a href="/socio/{{usuario.dni}}" class="btn btn-lg btn-default">Learn more</a>
+      <a href="{% url 'socio_back' usuario.dni %}" class="btn btn-lg btn-default">Learn more</a>
     </p>          
 {% endblock contenido %}
