--- a/legion/templates/backend/reporte_socio.html
+++ b/legion/templates/backend/reporte_socio.html
@@ -4,7 +4,8 @@
     <form  method='post' action='.' class="row" role="form" enctype="multipart/form-data">{% csrf_token %}
         <p class="col-lg-6">
           <label for="id_nombre">Nombre Socio:</label>
-          <select name="socio" id="id_socio" class="form-control">
+          <select name="socio" id="id_socio" class="form-control" required>
+            <option></option>
             {% for socio in socios %}
               <option value="{{socio.id}}" >{{socio.first_name}} {{socio.last_name}}</option>
             {% endfor %}
@@ -15,6 +16,7 @@
           </div>
       </form>
   <hr/>
+  {% if verdad %}
   <h3 class="text-center text-info">MONTOS PAGADOS</h3>
   <div class="row">
     <div class="reportes-generales tabla-responsive col-lg-12">
@@ -40,11 +42,25 @@
           <th></th>
           <th></th>
           <th><p class="text-primary">{{total}}</p></th>
-          <th><p class="text-primary">TOTAL</p></th>
+          <th><p class="text-primary">TOTAL PAGADO</p></th>
+        </tr>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th><p class="text-danger">{{restante}}</p></th>
+          <th><p class="text-danger">SALDO</p></th>
+        </tr>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th><p class="text-success">{{monto_apertura}}</p></th>
+          <th><p class="text-success">TOTAL POR PAGAR</p></th>
         </tr>
       </table>
     </div>
-
+    {% endif %}
   </div>
 
 {% endblock contenido %}
