--- a/legion/templates/frontend/socio.html
+++ b/legion/templates/frontend/socio.html
@@ -1,5 +1,8 @@
-{% extends 'backend/base.html' %}
+{% extends 'frontend/base.html' %}
 {% load staticfiles %}
+{% block script %}<script type="text/javascript">
+$(document).ready(function(){$("#socioss").addClass("active")});
+</script>{% endblock script %}
 {% block css %}
     <link href="{% static 'bootstrap/css/carousel.css' %}" rel="stylesheet" />
 {% endblock css %} 
