--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -52,6 +52,7 @@
                     <li class="dropdown-header">Mas info</li>
                     <!--<li><a href="#">Galería de Imagenes</a></li>-->
                     <li><a href="{% url 'periodismo' %}">Periodismo</a></li>
+                    <li><a href="{% url 'las_noticias' %}">Noticias</a></li>
                   </ul>
                 </li>
                 {% if user.is_authenticated %}
