--- a/legion/templates/backend/base.html
+++ b/legion/templates/backend/base.html
@@ -157,6 +157,11 @@
                 <i class="fa fa-th"></i> <span>Noticias</span>
               </a>
             </li>
+             <li>
+              <a href="{% url 'nuevo_socio' %}">
+                <i class="fa fa-th"></i> <span>Nuevo Socio</span>
+              </a>
+            </li>
             <li>
               <a href="{% url 'banner' %}">
                 <i class="fa fa-th"></i> <span>Notificacion</span>
