orden de parada

--- a/legion/templates/backend/profile.html
+++ b/legion/templates/backend/profile.html
@@ -84,12 +84,20 @@
 		      				{{formulario.picture}}
 		      			</td>
 	      			</tr>
-	      			<tr>
+	      			<!-- <tr>
 						<th>
 							<label>Categoria:</label>
 						</th>
 						<td>
 		      				{{formulario.categoria}}
+		      			</td>
+	      			</tr> -->
+	      			<tr>
+						<th>
+							<label>Orden De Parada:</label>
+						</th>
+						<td>
+		      				{{formulario.orden_parada}}
 		      			</td>
 	      			</tr>
 	      			<tr>
