--- a/legion/templates/backend/nuevo_socio.html
+++ b/legion/templates/backend/nuevo_socio.html
@@ -27,6 +27,10 @@
 	              <td>{{ formulario.password }}</td> 
 	            </tr>
 	            <tr>
+	              <td>Orden De Parada</td>
+	              <td>{{ formulario.orden_parada }}</td> 
+	            </tr>
+	            <tr>
 	            	<td></td>
 	            	<td><br>
 	            		<button class="btn btn-primary btn-lg btn-block" type="submit">Guardar</button>
@@ -37,6 +41,17 @@
 	</div>
 
 {% endblock contenido %}
-{% block scripts %}<script type="text/javascript">
+{% block scripts %}
+<script type="text/javascript">
 $(document).ready(function(){$("#id_password").addClass("form-control")});
-</script>{% endblock scripts %}
+</script>
+    <script src="{% static 'plugins/input-mask/jquery.inputmask.js' %}" type="text/javascript"></script>
+    <script src="{% static 'plugins/input-mask/jquery.inputmask.date.extensions.js' %}" type="text/javascript"></script>
+    <script src="{% static 'plugins/input-mask/jquery.inputmask.extensions.js' %}" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $(".data-input").inputmask();
+        });
+    </script>
+{% endblock scripts %}
