--- a/legion/templates/frontend/base.html
+++ b/legion/templates/frontend/base.html
@@ -34,7 +34,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a id="titulo" class="navbar-brand" href="#">Sociedad de Avelinos San Roque  -  "SASAR"</a>
+              <a id="titulo" class="navbar-brand" href="#">'SASAR'</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -55,6 +55,7 @@
                     <li><a href="{% url 'las_noticias' %}">Noticias</a></li>
                   </ul>
                 </li>
+                <li id="galeria"><a href="{% url 'galeria_de_fotos' %}">Galeria Multimedia</a></li>
                 {% if user.is_authenticated %}
                 {{usuario.gro}}
                     <li class=""><a href="{% url 'index' %}">Ingresar al Sistema</a></li>
@@ -105,10 +106,12 @@
             </div>
           </div>
       </footer>
+      <script src="{% static 'js/jquery.min.js' %}"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
       <script src="{% static 'plugins/fancybox/jquery.fancybox.js' %}"></script>
       {% block script %}{% endblock script %}
+      {% block js %}{% endblock js %}
     </div>
   </body>
 </html>
